--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -16,6 +16,24 @@ html {
   box-sizing: inherit;
 }
 
+/*  ---------------Reponsive Images-----------------  */
+img{
+  max-width:100%;
+}
+
+/*  --------------- Utility Classes -----------------  */
+
+.container{
+  width: 80vw;
+  max-width:960px;
+  margin:40px auto;
+}
+
+
+
+
+
+
 body{
 font-family: "Gabarito", sans-serif;
 margin:0;  
@@ -57,7 +75,10 @@ header.primary h2{
   margin:0;
 }
 
-header.primary nav {}
+header.primary nav {
+  max-width:960px;
+  margin:auto;
+}
 header.primary nav ul{
   display:flex;
   flex-direction:row;
@@ -82,6 +103,55 @@ header.primary nav ul li a:hover{
    background-color: rgba(0,0,0, .8);
 }
 
+#content{
+  line-height:1.4;
+}
+
+#content h2 {
+  color: #3b638b;
+  border-bottom: 1px dotted darkgrey;
+}
+
+#blog{
+  display:flex;
+  justify-content:space-around;
+  flex-direction:row;
+  gap:2rem;
+}
+
+#blog article.post {
+  box-shadow: 0 4px 8px rgba(0,0,0,.6);
+  padding:10px;
+  border-radius:4px;
+  font-size:.8rem;
+  transition:.4s;
+}
+
+#blog article.post:hover {
+  box-shadow: 0 8px 16px rgba(0,0,0,.8);
+}
+
+#blog figure{
+  margin:0;
+}
+
+#blog figcaption, time.post-date {
+  text-transform:uppercase;
+  font-size: 0.6rem;
+  text-align: center;
+  color: #c0c0c0;
+}
+
+#blog .post a{
+  color:#3b638b;
+}
+
+
+
+
+
+
+
 
 
 /* --------- Media Queries ----------- */
@@ -91,13 +161,15 @@ header.primary nav ul li a:hover{
 header.primary nav ul{
   flex-direction:column;
   gap:10px;
-  max-width: 200px;
-  margin:5 auto;
+  max-width:200px;
+  margin:10px auto;
 }  
   
   header.primary nav a{
     display:block;
-  }
+  }  
+  
+  
   
   
   
