--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -29,6 +29,30 @@ img {
   margin: 40px auto;
 }
 
+.img-right{
+  float:right;
+  border:1px solid #cccccc;
+  padding:5px;
+  margin:10px 0 10px 20px;
+  border-radius:40px;
+}
+
+.img-left{
+  float:left;
+  border:1px solid #030303;
+  padding:5px;
+  margin:10px 20px 10px 0;
+  border-radius:40px;
+}
+
+.img-center{
+  display:block;
+  margin: 20px auto;
+  border:1px solid #000000;
+  padding:5px;
+  border-radius:40px;
+}
+
 /*  --------------- Global Styles -----------------  */
 
 body {
@@ -121,6 +145,9 @@ header.primary nav ul li a:hover {
   justify-content: space-around;
   flex-direction: row;
   gap: 2rem;
+  border-top:1px solid #cccccc;
+  border-bottom:1px solid #cccccc;
+  padding: 40px 0 50px 0;
 }
 
 #blog article.post {
@@ -151,6 +178,80 @@ time.post-date {
   color: #3b638b;
 }
 
+
+#practice h2{
+    color: #b6c4d3;
+    border-bottom:1px dotted #cccccc;
+}
+
+#practice a{
+color: #3b638b;
+}
+
+#practice a:hover{
+  text-decoration:none;
+}
+
+#practice h3{
+ border-left: 7.55px solid #3c84cc;
+ padding: 5px 0 5px 10px;
+}
+
+table{
+  width:100%;
+  border: 1px solid #c0c0c0;
+  border-collapse:collapse;
+}
+caption {
+  font-weight: bold;
+  margin: 10px;
+  font-size:1.5rem;
+}
+
+thead{}
+tr:nth-child(even){
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+td:nth-child(n+2){
+  text-align:right;
+}
+
+tr:hover{
+      background-color: rgba(224, 18, 18, 0.4);
+}
+
+th{
+background-color: #172635;
+color:#ffffff;
+padding:7.5px;
+}
+td{
+  border: 1px solid #c0c0c0;
+  padding:5px;
+}
+
+#practice ol{
+  list-style-type:lower-roman;
+}
+
+#practice ul li ul{
+  list-style-type: square;
+}
+
+#practice dl dt{
+  font-weight:bold;
+}
+
+dl dd{
+  margin:0;
+}
+
+dd + dt{
+  margin-top:20px;
+  color:rgb(197, 9, 9);
+}
+
 aside[role="complementary"]{
 background-color: #172635;
 color:#ffffff;
@@ -179,7 +280,7 @@ aside article.widget footer{
 }
 
 #colophon{
-  background-color: #3b638b;
+  background-color: #11703c;
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='20' viewBox='0 0 16 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23172635' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M8 0v20L0 10M16 0v10L8 0M16 10v10H8'/%3E%3C/g%3E%3C/svg%3E");
   padding:5px;
   color:#ffffff;
@@ -199,7 +300,11 @@ aside article.widget footer{
   header.primary nav a {
     display: block;
   }
+}
+
+@media screen and (max-width: 420px) {
   #blog {
   flex-direction: column;
 }
 }
+
